<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- In App usage -->
    <string name="app_name">UWMarket</string>
    <string name="action_add">SELL</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Menu Items -->
    <string name="action_upload">Publish</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save_for_later">Save Draft</string>

    <!-- Facebook App ID -->
    <string name="app_id">497906953566757</string>

    <!-- Barcode Scanner -->
    <string name="zxinglib_app_name">ZXingLib</string>
    <string name="zxinglib_msg_default_status">Place the barcode in the rectangle.</string>
    <string name="scan">Scan</string>
    <string name="scan_resut_lable">Scan Result:</string>

    <!-- Select item to sell Fragment -->
    <string name="lbl_chosse_item">Select an item</string>
    <string name="btn_next">Next</string>
    <string-array name="lbl_spn_items">
        <item>Book</item>
        <item>Clicker</item>
        <item>Book Group</item>
    </string-array>

    <!--Add Book Fragment -->
    <string name="lbl_book_title">Book title</string>
    <string name="lbl_book_author">Author</string>
    <string name="lbl_book_isbn">ISBN</string>
    <string name="btn_book_scan">Scan</string>
    <string name="lbl_book_price">Price (CAD)</string>
    <string name="lbl_book_condition">Condition of the book</string>
    <string name="lbl_book_category">Subject Category</string>
    <string name="lbl_book_image">Add Image of the book</string>
    <string name="lbl_book_description">Description\n</string>
    <string-array name="array_book_category">
        <item>Other</item>
        <item>Science</item>
        <item>Law</item>
        <item>Engineering</item>
        <item>Business</item>
        <item>Medical</item>
        <item>Arts</item>
        <item>Mathematics</item>
    </string-array>

    <!-- Add Clicker Fragment -->
    <string name="lbl_clicker_title">Title</string>
    <string name="lbl_clicker_condition">Condition of the clicker</string>
    <string name="lbl_clicker_image">Add Image of the clicker</string>

    <!-- Item condition -->
    <string-array name="array_condition">
        <item>Mint</item>
        <item>Excellent</item>
        <item>Good</item>
        <item>Fair</item>
    </string-array>


    <!--Main Drawer-->
    <string-array name="DrawerTitles">
        <item>Market</item>
        <item>My Items</item>
        <item>My Requests</item>
        <item>Messages</item>
        <item>Settings</item>
    </string-array>


</resources>
